--- a/index.html
+++ b/index.html
@@ -12,61 +12,63 @@
 </head>
 <body>
     <div class="menu">
-        <div class="block__menu">
-            <div class="bigsun"><img src="icons/bigsun.png" alt=""></div>
-            <h1 class="title__one">Your forecast app</h1>
+        <div class="mainScreen">
+            <div class="mainScreen__logo"><img src="icons/bigsun.png" alt=""></div>
+            <h1 class="mainScreen__title__one">Your forecast app</h1>
             <div>
-                <div>
+                <div class="search">
                     <form name="search" method="post">
                         <input class="enter" type="text" value="enter your city">
                         <div class="search__icon"><a href="#"><img src="icons/search.png" alt=""></a></div>
                     </form>
                 </div>
             </div>
-            <h3 class="title__three"><a href="#">give me a random one</a></h3>
+            <a href="#">give me a random one</a>
         </div>
     </div>
     <div class="london">
-        <div class="back"></div>
-        <div class="back__search"></div>
-        <div class="prognoz">
+        <div class="buttons">
+            <button type="button" class="button__back" name="button-back"></button>
+            <button type="button" class="button__search" name="button-search"></button>
+        </div>
+        <div class="forecast">
             <div class="weather__picture--chilly">
                 <div class="temperature">10</div>
                 <div class="weather__small"><img src="icons/smallsun.png" alt=""></div>
             </div>
             <div class="title">London</div>
-            <div class="sub__title">11. 06. 2023</div>
+            <div class="title__sub">11. 06. 2023</div>
             <div class="week">
                 <div class="day">
-                    <div class="calender calender--one"><img src="icons/calender.png" alt=""></div>
+                    <div class="calendar calendar--one"><img src="icons/calendar.png" alt=""></div>
                     <div class="weather">
                         <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
                     </div>
                     <span class="number">8</span>
                 </div>
                 <div class="day">
-                    <div class="calender calender--two"><img src="icons/calender.png" alt=""></div>
+                    <div class="calendar calendar--two"><img src="icons/calendar.png" alt=""></div>
                     <div class="weather">
                         <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
                     </div>
                     <span class="number">7</span>
                 </div>
                 <div class="day">
-                    <div class="calender calender--three"><img src="icons/calender.png" alt=""></div>
+                    <div class="calendar calendar--three"><img src="icons/calendar.png" alt=""></div>
                     <div class="weather">
                         <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
                     </div>
                     <span class="number">9</span>
                 </div>
                 <div class="day">
-                    <div class="calender calender--four"><img src="icons/calender.png" alt=""></div>
+                    <div class="calendar calendar--four"><img src="icons/calendar.png" alt=""></div>
                     <div class="weather">
                         <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
                     </div>
                     <span class="number">11</span>
                 </div>
                 <div class="day">
-                    <div class="calender calender--five"><img src="icons/calender.png" alt=""></div>
+                    <div class="calendar calendar--five"><img src="icons/calendar.png" alt=""></div>
                     <div class="weather">
                         <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
                     </div>
@@ -76,46 +78,48 @@
         </div>
     </div>
     <div class="tokio">
-        <div class="back"></div>
-        <div class="back__search"></div>
-        <div class="prognoz">
+        <div class="buttons">
+            <button type="button" class="button__back" name="button-back"></button>
+            <button type="button" class="button__search" name="button-search"></button>
+        </div>
+        <div class="forecast">
             <div class="weather__picture--rainy">
                 <div class="temperature">15</div>
                 <div class="weather__small"><img src="icons/rain2.png" alt=""></div>
             </div>
             <div class="title">Tokio</div>
-            <div class="sub__title">11. 06. 2023</div>
+            <div class="title__sub">11. 06. 2023</div>
             <div class="week">
                 <div class="day">
-                    <div class="calender calender--one"><img src="icons/calender.png" alt=""></div>
+                    <div class="calendar calendar--one"><img src="icons/calendar.png" alt=""></div>
                     <div class="weather">
                         <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
                     </div>
                     <span class="number">8</span>
                 </div>
                 <div class="day">
-                    <div class="calender calender--two"><img src="icons/calender.png" alt=""></div>
+                    <div class="calendar calendar--two"><img src="icons/calendar.png" alt=""></div>
                     <div class="weather">
                         <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
                     </div>
                     <span class="number">7</span>
                 </div>
                 <div class="day">
-                    <div class="calender calender--three"><img src="icons/calender.png" alt=""></div>
+                    <div class="calendar calendar--three"><img src="icons/calendar.png" alt=""></div>
                     <div class="weather">
                         <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
                     </div>
                     <span class="number">9</span>
                 </div>
                 <div class="day">
-                    <div class="calender calender--four"><img src="icons/calender.png" alt=""></div>
+                    <div class="calendar calendar--four"><img src="icons/calendar.png" alt=""></div>
                     <div class="weather">
                         <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
                     </div>
                     <span class="number">11</span>
                 </div>
                 <div class="day">
-                    <div class="calender calender--five"><img src="icons/calender.png" alt=""></div>
+                    <div class="calendar calendar--five"><img src="icons/calendar.png" alt=""></div>
                     <div class="weather">
                         <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
                     </div>
@@ -125,46 +129,48 @@
         </div>
     </div>
     <div class="miami">
-        <div class="back"></div>
-        <div class="back__search"></div>
-        <div class="prognoz">
+        <div class="buttons">
+            <button type="button" class="button__back" name="button-back"></button>
+            <button type="button" class="button__search" name="button-search"></button>
+        </div>
+        <div class="forecast">
             <div class="weather__picture--sahara">
                 <div class="temperature">25</div>
                 <div class="weather__small"><img src="icons/smallsun.png" alt=""></div>
             </div>
             <div class="title">Miami</div>
-            <div class="sub__title">11. 06. 2023</div>
+            <div class="title__sub">11. 06. 2023</div>
             <div class="week">
                 <div class="day">
-                    <div class="calender calender--one"><img src="icons/calender.png" alt=""></div>
+                    <div class="calendar calendar--one"><img src="icons/calendar.png" alt=""></div>
                     <div class="weather">
                         <div class="weather__icon"><img src="icons/smallsun2.png" alt=""></div>
                     </div>
                     <span class="number">28</span>
                 </div>
                 <div class="day">
-                    <div class="calender calender--two"><img src="icons/calender.png" alt=""></div>
+                    <div class="calendar calendar--two"><img src="icons/calendar.png" alt=""></div>
                     <div class="weather">
                         <div class="weather__icon"><img src="icons/smallsun2.png" alt=""></div>
                     </div>
                     <span class="number">29</span>
                 </div>
                 <div class="day">
-                    <div class="calender calender--three"><img src="icons/calender.png" alt=""></div>
+                    <div class="calendar calendar--three"><img src="icons/calendar.png" alt=""></div>
                     <div class="weather">
                         <div class="weather__icon"><img src="icons/smallsun2.png" alt=""></div>
                     </div>
                     <span class="number">27</span>
                 </div>
                 <div class="day">
-                    <div class="calender calender--four"><img src="icons/calender.png" alt=""></div>
+                    <div class="calendar calendar--four"><img src="icons/calendar.png" alt=""></div>
                     <div class="weather">
                         <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
                     </div>
                     <span class="number">20</span>
                 </div>
                 <div class="day">
-                    <div class="calender calender--five"><img src="icons/calender.png" alt=""></div>
+                    <div class="calendar calendar--five"><img src="icons/calendar.png" alt=""></div>
                     <div class="weather">
                         <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
                     </div>
