--- a/index.html
+++ b/index.html
@@ -19,165 +19,79 @@
                 <div class="search">
                     <form name="search" method="post">
                         <input class="enter" type="text" value="enter your city">
-                        <div class="search__icon"><a href="#"><img src="icons/search.png" alt=""></a></div>
                     </form>
                 </div>
+                <button type="button" class="search__icon" name="search-icon"><img src="icons/search.png" alt=""></button>
             </div>
-            <a href="#">give me a random one</a>
+            <div class="mainScreen__title__three"><a href="#">give me a random one</a></div>
         </div>
     </div>
     <div class="london">
-        <div class="buttons">
-            <button type="button" class="button__back" name="button-back"></button>
-            <button type="button" class="button__search" name="button-search"></button>
-        </div>
-        <div class="forecast">
-            <div class="weather__picture--chilly">
-                <div class="temperature">10</div>
-                <div class="weather__small"><img src="icons/smallsun.png" alt=""></div>
+        <div class="cityScreen"></div>
+            <div class="buttons">
+                <button type="button" class="button__back" name="button-back"></button>
+                <button type="button" class="button__search" name="button-search"></button>
             </div>
-            <div class="title">London</div>
-            <div class="title__sub">11. 06. 2023</div>
-            <div class="week">
-                <div class="day">
-                    <div class="calendar calendar--one"><img src="icons/calendar.png" alt=""></div>
-                    <div class="weather">
-                        <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
-                    </div>
-                    <span class="number">8</span>
+            <div class="forecast">
+                <div class="weather__picture--chilly">
+                    <div class="temperature">10</div>
+                    <div class="weather__small"><img src="icons/smallsun.png" alt=""></div>
                 </div>
-                <div class="day">
-                    <div class="calendar calendar--two"><img src="icons/calendar.png" alt=""></div>
-                    <div class="weather">
-                        <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
+                <div class="title">London</div>
+                <div class="title__sub">11. 06. 2023</div>
+                <div class="week">
+                    <div class="day">
+                        <div class="calendar">
+                            <img src="icons/calendar.png" alt="">
+                            <div class="calendar__number">12</div>
+                        </div>
+                        <div class="weather">
+                            <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
+                        </div>
+                        <span class="number">8</span>
                     </div>
-                    <span class="number">7</span>
-                </div>
-                <div class="day">
-                    <div class="calendar calendar--three"><img src="icons/calendar.png" alt=""></div>
-                    <div class="weather">
-                        <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
+                    <div class="day">
+                        <div class="calendar">
+                            <img src="icons/calendar.png" alt="">
+                            <div class="calendar__number">13</div>
+                        </div>
+                        <div class="weather">
+                            <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
+                        </div>
+                        <span class="number">7</span>
                     </div>
-                    <span class="number">9</span>
-                </div>
-                <div class="day">
-                    <div class="calendar calendar--four"><img src="icons/calendar.png" alt=""></div>
-                    <div class="weather">
-                        <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
+                    <div class="day">
+                        <div class="calendar">
+                            <img src="icons/calendar.png" alt="">
+                            <div class="calendar__number">14</div>
+                        </div>
+                        <div class="weather">
+                            <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
+                        </div>
+                        <span class="number">9</span>
                     </div>
-                    <span class="number">11</span>
-                </div>
-                <div class="day">
-                    <div class="calendar calendar--five"><img src="icons/calendar.png" alt=""></div>
-                    <div class="weather">
-                        <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
+                    <div class="day">
+                        <div class="calendar">
+                            <img src="icons/calendar.png" alt="">
+                            <div class="calendar__number">15</div>
+                        </div>
+                        <div class="weather">
+                            <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
+                        </div>
+                        <span class="number">11</span>
                     </div>
-                    <span class="number">13</span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="tokio">
-        <div class="buttons">
-            <button type="button" class="button__back" name="button-back"></button>
-            <button type="button" class="button__search" name="button-search"></button>
-        </div>
-        <div class="forecast">
-            <div class="weather__picture--rainy">
-                <div class="temperature">15</div>
-                <div class="weather__small"><img src="icons/rain2.png" alt=""></div>
-            </div>
-            <div class="title">Tokio</div>
-            <div class="title__sub">11. 06. 2023</div>
-            <div class="week">
-                <div class="day">
-                    <div class="calendar calendar--one"><img src="icons/calendar.png" alt=""></div>
-                    <div class="weather">
-                        <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
+                    <div class="day">
+                        <div class="calendar">
+                            <img src="icons/calendar.png" alt="">
+                            <div class="calendar__number">16</div>
+                        </div>
+                        <div class="weather">
+                            <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
+                        </div>
+                        <span class="number">13</span>
                     </div>
-                    <span class="number">8</span>
-                </div>
-                <div class="day">
-                    <div class="calendar calendar--two"><img src="icons/calendar.png" alt=""></div>
-                    <div class="weather">
-                        <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
-                    </div>
-                    <span class="number">7</span>
-                </div>
-                <div class="day">
-                    <div class="calendar calendar--three"><img src="icons/calendar.png" alt=""></div>
-                    <div class="weather">
-                        <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
-                    </div>
-                    <span class="number">9</span>
-                </div>
-                <div class="day">
-                    <div class="calendar calendar--four"><img src="icons/calendar.png" alt=""></div>
-                    <div class="weather">
-                        <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
-                    </div>
-                    <span class="number">11</span>
-                </div>
-                <div class="day">
-                    <div class="calendar calendar--five"><img src="icons/calendar.png" alt=""></div>
-                    <div class="weather">
-                        <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
-                    </div>
-                    <span class="number">13</span>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="miami">
-        <div class="buttons">
-            <button type="button" class="button__back" name="button-back"></button>
-            <button type="button" class="button__search" name="button-search"></button>
-        </div>
-        <div class="forecast">
-            <div class="weather__picture--sahara">
-                <div class="temperature">25</div>
-                <div class="weather__small"><img src="icons/smallsun.png" alt=""></div>
-            </div>
-            <div class="title">Miami</div>
-            <div class="title__sub">11. 06. 2023</div>
-            <div class="week">
-                <div class="day">
-                    <div class="calendar calendar--one"><img src="icons/calendar.png" alt=""></div>
-                    <div class="weather">
-                        <div class="weather__icon"><img src="icons/smallsun2.png" alt=""></div>
-                    </div>
-                    <span class="number">28</span>
-                </div>
-                <div class="day">
-                    <div class="calendar calendar--two"><img src="icons/calendar.png" alt=""></div>
-                    <div class="weather">
-                        <div class="weather__icon"><img src="icons/smallsun2.png" alt=""></div>
-                    </div>
-                    <span class="number">29</span>
-                </div>
-                <div class="day">
-                    <div class="calendar calendar--three"><img src="icons/calendar.png" alt=""></div>
-                    <div class="weather">
-                        <div class="weather__icon"><img src="icons/smallsun2.png" alt=""></div>
-                    </div>
-                    <span class="number">27</span>
-                </div>
-                <div class="day">
-                    <div class="calendar calendar--four"><img src="icons/calendar.png" alt=""></div>
-                    <div class="weather">
-                        <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
-                    </div>
-                    <span class="number">20</span>
-                </div>
-                <div class="day">
-                    <div class="calendar calendar--five"><img src="icons/calendar.png" alt=""></div>
-                    <div class="weather">
-                        <div class="weather__icon"><img src="icons/rain.png" alt=""></div>
-                    </div>
-                    <span class="number">22</span>
-                </div>
-            </div>
-        </div>
     </div>
 </body>
 </html>
