--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <div class="london">
         <div class="cityScreen">
             <div class="buttons">
-                <button type="button" class="button__back" name="button-back"></button>
-                <button type="button" class="button__search" name="button-search"></button>
+                <button type="button" class="button" name="button-back"></button>
+                <button type="button" class="button" name="button-search"></button>
             </div>
             <div class="weather_card">
                 <div class="weather_card__chilly">
