--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div id="random" class="mainScreen__title__three"><a href="#">give me a random one</a></div>
         </div>
     </div>
-    <div id="london" class="london hidden">
+    <div id="screenLondon" class="london hidden">
         <div class="cityScreen">
             <div class="buttons">
                 <button id="buttonBack" class="button button__back" name="button-back"></button>
