--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body id="body">
     <div id="mainMenu" class="menu">
-        <div class="mainScreen">
+        <div id = "mainScreen" class="mainScreen">
             <div class="mainScreen__logo"><img src="icons/bigsun.png" alt=""></div>
             <h1 class="mainScreen__title__one">Your forecast app</h1>
             <div>
@@ -26,9 +26,9 @@
             <div id="random" class="mainScreen__title__three"><a href="#">give me a random one</a></div>
         </div>
     </div>
-    <div id="screenLondon" class="london hidden">
-        <div class="cityScreen">
-            <div class="buttons">
+    <div id="screenLondon" class="london hidden none">
+        <div id="cityScreen" class="cityScreen">
+            <!-- <div id="buttons" class="buttons">
                 <button id="buttonBack" class="button button__back" name="button-back"></button>
                 <button id="buttonSearch" class="button button__search" name="button-search"></button>
             </div>
@@ -91,7 +91,7 @@
                         <span class="weather_card__number">13</span>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <script src="script.js"></script>
